:bug: Fix overflowing bages on modal

--- a/public/styles/modal.css
+++ b/public/styles/modal.css
@@ -8,6 +8,6 @@
   flex-grow: 0 !important;
 }
 
-.no-left-padding {
-  padding-left: 0px;
+.max-width-250 {
+  max-width: 250px;
 }
